# boxel

./: .gdb_history  Cargo.toml  README.md  Session.vim  memo.rs  rusty-tags.vi  todo.md
src/: block.vert  camera.rs  chunk.rs  client.rs  geometry.rs  lib.rs  main.rs  player.rs  sample.frag  sample.vert  server.rs  struct_communication.rs  teapot.rs
