[package]
name = "game01"
version = "0.1.0"
authors = ["mizakura <mizakura07@gmail.com>"]
edition = "2018"

[dependencies]
glium = "*"
tokio = "*"
futures = "*"
bytes = "*"
rodio = "*"
image = "*"
serde = { version = "*", features = ["derive"] }
rmp-serde = "*"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
